@@ -51,6 +51,7 @@ fixed bugs:
 - fixed bugs in lpi_none.c w.r.t. debug and opt mode 
 - fixed bugs in cons_orbitope.c: orbitopal fixing for the packing case had two bugs; also fixed one wrong assert
 - fixed assertion in tree.c w.r.t. node estimation
+- fixed computation of node's objective value estimate when branching on continuous variables (see SCIPtreeCalcChildEstimate, SCIPtreeBranchVar)
 
 parameters:
 - added parameter <constraints/quadratic/disaggregate> to split a block-separable quadratic constraint into several quadratic constraint
